[gd_scene load_steps=4 format=3 uid="uid://pup7angt65vg"]

[ext_resource type="Script" path="res://Scripts/escenario_pruebas.gd" id="1_8f1ic"]
[ext_resource type="PackedScene" uid="uid://c64ouv5phj5ef" path="res://Scenes/nave.tscn" id="1_iu3se"]
[ext_resource type="PackedScene" uid="uid://b448qcmy7bpr" path="res://Scenes/pausa_game_over.tscn" id="4_iw4pw"]

[node name="EscenarioPruebas" type="Node2D"]
script = ExtResource("1_8f1ic")

[node name="Pausa-GameOver" parent="." instance=ExtResource("4_iw4pw")]

[node name="Nave" parent="." instance=ExtResource("1_iu3se")]

[connection signal="jugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_jugar"]
[connection signal="rejugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_rejugar"]
[connection signal="salir" from="Pausa-GameOver" to="." method="_on_pausa_game_over_salir"]
